[gd_scene load_steps=41 format=4 uid="uid://ck12hgxt02mc2"]

[ext_resource type="Script" uid="uid://dxbia2aotfflp" path="res://scripts/intro_cutscene_cave.gd" id="1_jiuq5"]
[ext_resource type="PackedScene" uid="uid://n5t1t45l273n" path="res://scenes/data_manager.tscn" id="1_nnjfw"]
[ext_resource type="AudioStream" uid="uid://be0nuvxfjy7eq" path="res://assets/audio/bgm/bg_1.ogg" id="1_w3ser"]
[ext_resource type="JSON" path="res://assets/dialogue/cave_dialogue.json" id="2_u6cyb"]
[ext_resource type="Texture2D" uid="uid://dtgst8ahegxt5" path="res://assets/img/tiles.png" id="2_w3ser"]
[ext_resource type="Script" uid="uid://b7c0642t3cu" path="res://scripts/spawn_locations.gd" id="3_lui1t"]
[ext_resource type="JSON" path="res://assets/dialogue/after_potions_dialogue.json" id="3_qtyfc"]
[ext_resource type="PackedScene" uid="uid://coxxmwsayyd7s" path="res://scenes/transition_screen.tscn" id="3_u6cyb"]
[ext_resource type="PackedScene" uid="uid://bbkvicnx6hvx" path="res://scenes/player.tscn" id="4_6fm3r"]
[ext_resource type="Texture2D" uid="uid://f6dp30swj5ub" path="res://assets/img/crystal_tilesheet.png" id="4_lui1t"]
[ext_resource type="PackedScene" uid="uid://dsyi0ewb6pf0q" path="res://scenes/dialogue.tscn" id="5_jiuq5"]
[ext_resource type="VideoStream" uid="uid://da0438ifkbs6v" path="res://assets/img/transform_seq.ogv" id="6_qtyfc"]
[ext_resource type="PackedScene" uid="uid://lqwp6i4a5lqc" path="res://scenes/interactable_object.tscn" id="6_u6cyb"]
[ext_resource type="Script" uid="uid://kgar8pparo1f" path="res://scripts/cauldron.gd" id="13_f5qid"]
[ext_resource type="Texture2D" uid="uid://bsc763p3r66hd" path="res://assets/img/cauldron.png" id="13_u6cyb"]
[ext_resource type="Texture2D" uid="uid://dvkpfxbdjcci6" path="res://assets/img/interact_popup.png" id="15_qtyfc"]

[sub_resource type="Animation" id="Animation_qtyfc"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransformationScene:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3fjxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransformationScene:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3aj0"]
_data = {
&"RESET": SubResource("Animation_3fjxr"),
&"fade_out": SubResource("Animation_qtyfc")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pw63i"]
resource_name = "Tiles"
texture = ExtResource("2_w3ser")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0

[sub_resource type="TileSet" id="TileSet_7ykc4"]
tile_size = Vector2i(50, 50)
sources/0 = SubResource("TileSetAtlasSource_pw63i")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6fm3r"]
texture = ExtResource("4_lui1t")
texture_region_size = Vector2i(10, 10)
0:0/size_in_atlas = Vector2i(4, 5)
0:0/0 = 0
0:5/size_in_atlas = Vector2i(4, 5)
0:5/0 = 0
0:10/size_in_atlas = Vector2i(4, 5)
0:10/0 = 0
4:0/size_in_atlas = Vector2i(1, 3)
4:0/0 = 0
5:0/size_in_atlas = Vector2i(1, 3)
5:0/0 = 0
6:0/size_in_atlas = Vector2i(1, 3)
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jiuq5"]
sources/0 = SubResource("TileSetAtlasSource_6fm3r")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_18nlu"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_c1pb6"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6wevv"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_e1cbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6cyb"]
size = Vector2(199.5, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxwcu"]
size = Vector2(4, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5qid"]
size = Vector2(4, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtyfc"]
size = Vector2(4, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fjxr"]
size = Vector2(6, 251)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3aj0"]
size = Vector2(150, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f23ee"]
size = Vector2(58, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyue4"]
size = Vector2(200, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq3t6"]
size = Vector2(54, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwcnq"]
size = Vector2(4, 91)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lui1t"]
size = Vector2(29, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gubc5"]
size = Vector2(37, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pu3yx"]
size = Vector2(66, 46)

[node name="Base" type="Node2D"]
script = ExtResource("1_jiuq5")
first_cutscene_dialogue = ExtResource("2_u6cyb")
second_cutscene_dialogue = ExtResource("3_qtyfc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_w3ser")
autoplay = true

[node name="TransitionScreen" parent="." instance=ExtResource("3_u6cyb")]
z_index = 7
offset_left = -387.0
offset_top = -204.0
offset_right = 765.0
offset_bottom = 949.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -506.0
offset_top = -179.0
offset_right = 14.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Transformation" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transformation"]
libraries = {
&"": SubResource("AnimationLibrary_k3aj0")
}

[node name="ColorRect" type="ColorRect" parent="Transformation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TransformationScene" type="VideoStreamPlayer" parent="Transformation"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -240.0
offset_right = 306.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("6_qtyfc")

[node name="DataManager" parent="." instance=ExtResource("1_nnjfw")]
unique_name_in_owner = true

[node name="BackgroundTileLayer" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAAAAAEAAAAGAAEAAAAAAAIAAAAGAAEAAAAAAAMAAAAGAAEAAAABAAEAAAAHAAEAAAABAAIAAAAHAAEAAAABAAMAAAAHAAEAAAACAAEAAAAHAAEAAAACAAIAAAAHAAEAAAACAAMAAAAHAAEAAAADAAAAAAAHAAAAAAADAAEAAAAHAAEAAAADAAIAAAAHAAEAAAADAAMAAAAHAAEAAAAEAAAAAAAHAAAAAAAEAAQAAAAHAAAAAAAAAAQAAAAGAAEAAAABAAQAAAAHAAEAAAACAAQAAAAGAAAAAAADAAQAAAAHAAAAAAAEAAEAAAAHAAEAAAAEAAIAAAAHAAEAAAAEAAMAAAAHAAEAAAAAAAAAAAAGAAAAAAABAAAAAAAHAAAAAAACAAAAAAAHAAAAAAAFAAMAAAAHAAEAAAAFAAIAAAAHAAEAAAAGAAIAAAAHAAEAAAAIAAEAAAAHAAEAAAAJAAEAAAAHAAEAAAALAAMAAAAHAAEAAAAMAAQAAAAIAAEAAAAIAAcAAAAIAAEAAAALAAcAAAAHAAEAAAAFAAcAAAAIAAIAAAAFAAgAAAAHAAEAAAAMAAkAAAAIAAEAAAADAAYAAAAHAAEAAAAGAAYAAAAHAAIAAAAFAAYAAAAHAAEAAAAFAAUAAAAHAAEAAAAGAAUAAAAHAAAAAAAHAAUAAAAHAAAAAAAIAAUAAAAIAAAAAAALAAYAAAAHAAEAAAAIAAIAAAAHAAEAAAAHAAIAAAAHAAEAAAAIAAMAAAAHAAEAAAAKAAEAAAAHAAEAAAALAAAAAAAHAAAAAAAAAAYAAAAGAAEAAAAAAAcAAAAGAAEAAAABAAgAAAAHAAEAAAACAAgAAAAHAAEAAAAGAAQAAAAHAAEAAAAHAAQAAAAHAAEAAAAIAAQAAAAHAAEAAAAFAAAAAAAHAAAAAAAGAAAAAAAHAAAAAAAHAAAAAAAHAAAAAAAJAAQAAAAHAAEAAAAJAAUAAAAHAAEAAAAKAAUAAAAHAAEAAAAKAAYAAAAHAAEAAAAJAAgAAAAHAAEAAAAHAAgAAAAGAAEAAAABAAYAAAAHAAEAAAABAAcAAAAHAAEAAAACAAcAAAAGAAIAAAAAAAgAAAAGAAEAAAAAAAkAAAAGAAEAAAALAAgAAAAHAAEAAAAMAAgAAAAIAAEAAAAMAAYAAAAIAAEAAAAKAAMAAAAHAAEAAAAKAAQAAAAHAAEAAAALAAQAAAAHAAEAAAAMAAcAAAAIAAEAAAALAAUAAAAHAAEAAAAMAAUAAAAIAAEAAAAJAAMAAAAHAAEAAAAJAAIAAAAHAAEAAAAKAAIAAAAHAAEAAAAMAAEAAAAIAAEAAAAMAAIAAAAIAAEAAAAJAAcAAAAHAAEAAAAIAAgAAAAIAAEAAAAIAAYAAAAIAAEAAAAJAAYAAAAHAAEAAAAHAAYAAAAHAAEAAAAHAAcAAAAGAAEAAAAGAAcAAAAHAAEAAAAGAAgAAAAHAAEAAAABAAUAAAAHAAEAAAACAAUAAAAHAAEAAAAAAAUAAAAGAAEAAAACAAYAAAAGAAEAAAADAAUAAAAHAAEAAAAEAAUAAAAHAAEAAAAEAAYAAAAHAAEAAAAEAAcAAAAHAAIAAAAEAAgAAAAHAAEAAAAKAAcAAAAHAAEAAAAKAAgAAAAHAAEAAAAGAAEAAAAHAAEAAAAHAAEAAAAHAAEAAAAFAAQAAAAIAAAAAAAGAAMAAAAHAAEAAAAHAAMAAAAHAAEAAAAFAAEAAAAHAAEAAAALAAEAAAAHAAEAAAALAAIAAAAHAAEAAAAMAAMAAAAIAAEAAAADAAgAAAAHAAEAAAADAAcAAAAHAAIAAAAIAAAAAAAHAAAAAAAJAAAAAAAHAAAAAAAKAAAAAAAHAAAAAAAMAAAAAAAHAAAAAAAAAAoAAAAGAAEAAAAAAAsAAAAGAAEAAAAAAAwAAAAGAAEAAAAAAA0AAAAGAAEAAAAAAA4AAAAGAAEAAAAMAAoAAAAIAAEAAAAMAAsAAAAIAAEAAAAMAAwAAAAIAAEAAAAMAA0AAAAIAAEAAAAMAA4AAAAIAAEAAAAMAA8AAAAIAAIAAAAAAA8AAAAGAAIAAAABAA8AAAAHAAIAAAACAA8AAAAHAAIAAAADAA8AAAAHAAIAAAAEAA8AAAAHAAIAAAAFAA8AAAAHAAIAAAAGAA8AAAAHAAIAAAAHAA8AAAAHAAIAAAAIAA8AAAAHAAIAAAAJAA8AAAAHAAIAAAAKAA8AAAAHAAIAAAALAA8AAAAHAAIAAAABAAoAAAAHAAEAAAABAAsAAAAHAAEAAAABAAwAAAAHAAEAAAABAA0AAAAGAAAAAAABAA4AAAAGAAIAAAACAAoAAAAHAAEAAAACAAsAAAAHAAEAAAACAAwAAAAHAAEAAAACAA0AAAAHAAAAAAACAA4AAAAHAAIAAAADAAoAAAAHAAEAAAADAAsAAAAHAAEAAAADAAwAAAAHAAEAAAADAA0AAAAIAAAAAAADAA4AAAAIAAIAAAAEAAoAAAAHAAEAAAAEAAsAAAAHAAEAAAAEAAwAAAAHAAEAAAAEAA0AAAAHAAEAAAAEAA4AAAAHAAEAAAAFAAoAAAAHAAEAAAAFAAsAAAAHAAEAAAAFAAwAAAAHAAEAAAAFAA0AAAAHAAEAAAAFAA4AAAAHAAEAAAAGAAoAAAAGAAAAAAAGAAsAAAAGAAIAAAAGAAwAAAAHAAEAAAAGAA0AAAAHAAEAAAAGAA4AAAAHAAEAAAAHAAoAAAAHAAEAAAAHAAsAAAAHAAIAAAAHAAwAAAAHAAEAAAAHAA0AAAAHAAEAAAAHAA4AAAAHAAEAAAAIAAoAAAAHAAEAAAAIAAsAAAAHAAIAAAAIAAwAAAAHAAEAAAAIAA0AAAAHAAEAAAAIAA4AAAAHAAEAAAAJAAoAAAAIAAAAAAAJAAsAAAAIAAIAAAAJAAwAAAAHAAEAAAAJAA0AAAAHAAEAAAAJAA4AAAAHAAEAAAAKAAoAAAAHAAEAAAAKAAsAAAAHAAEAAAAKAAwAAAAHAAEAAAAKAA0AAAAHAAEAAAAKAA4AAAAHAAEAAAALAAoAAAAHAAEAAAALAAsAAAAHAAEAAAALAAwAAAAHAAEAAAALAA0AAAAHAAEAAAALAA4AAAAHAAEAAAABAAkAAAAHAAEAAAACAAkAAAAHAAEAAAADAAkAAAAHAAEAAAAEAAkAAAAHAAEAAAAFAAkAAAAHAAEAAAAGAAkAAAAHAAEAAAAHAAkAAAAGAAEAAAAIAAkAAAAIAAEAAAAJAAkAAAAHAAEAAAAKAAkAAAAHAAEAAAALAAkAAAAHAAEAAAA=")
tile_set = SubResource("TileSet_7ykc4")

[node name="CrystalTileLayer" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAAHAAIAAAAAAAAAAAAOAAYAAAAAAAUAAAAUAAQAAAAAAAAAAAAjABEAAAAAAAoAAAACABEAAAAAAAAAAAAGABwAAAAAAAoAAAATABkAAAAAAAUAAAAWACkAAAAAAAUAAAAfAC0AAAAAAAoAAAAFAC4AAAAAAAoAAAAiACYAAAAAAAAAAAALACMAAAAAAAAAABAXAAkAAAAAAAUAAAAgAAMAAAAAAAoAAAAQAC4AAAAAAAUAAAA=")
tile_set = SubResource("TileSet_jiuq5")

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2(0, 400)
shape = SubResource("WorldBoundaryShape2D_18nlu")

[node name="RightWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(650, 400)
shape = SubResource("WorldBoundaryShape2D_c1pb6")

[node name="TopWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(325, 0)
shape = SubResource("WorldBoundaryShape2D_6wevv")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(325, 800)
shape = SubResource("WorldBoundaryShape2D_e1cbu")

[node name="Ledges" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Ledges"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(200.25, 203.5)
shape = SubResource("RectangleShape2D_u6cyb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(200, 396)
shape = SubResource("RectangleShape2D_u6cyb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(102, 350)
shape = SubResource("RectangleShape2D_lxwcu")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(102, 224.5)
shape = SubResource("RectangleShape2D_f5qid")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(298, 226)
shape = SubResource("RectangleShape2D_f5qid")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(298, 375)
shape = SubResource("RectangleShape2D_f5qid")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(352, 426)
shape = SubResource("RectangleShape2D_qtyfc")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(447, 375.5)
shape = SubResource("RectangleShape2D_3fjxr")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(375, 252)
shape = SubResource("RectangleShape2D_k3aj0")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(325, 348)
shape = SubResource("RectangleShape2D_f23ee")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(400, 597.5)
shape = SubResource("RectangleShape2D_iyue4")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(472, 502.5)
shape = SubResource("RectangleShape2D_sq3t6")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(327, 502)
shape = SubResource("RectangleShape2D_sq3t6")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(302, 549.5)
shape = SubResource("RectangleShape2D_nwcnq")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Ledges/StaticBody2D"]
z_index = 1
position = Vector2(497, 550)
shape = SubResource("RectangleShape2D_nwcnq")

[node name="Objects" type="Node" parent="."]

[node name="Crystals" type="StaticBody2D" parent="Objects"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(118.5, 47.5)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(230, 112)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(327, 79)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(375, 160)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(520, 64)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(569, 288)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(311, 416)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(103, 464)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(186, 576)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(359, 672)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(550, 624)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(503, 736)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(262, 752)
shape = SubResource("RectangleShape2D_lui1t")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Objects/Crystals"]
z_index = 2
position = Vector2(87, 752)
shape = SubResource("RectangleShape2D_lui1t")

[node name="SpawnLocations" type="Node" parent="." node_paths=PackedStringArray("spawn_location")]
script = ExtResource("3_lui1t")
spawn_location = NodePath("Cave")

[node name="Cave" type="Node2D" parent="SpawnLocations"]
position = Vector2(242, 54)

[node name="Player" parent="." instance=ExtResource("4_6fm3r")]
z_index = 1
position = Vector2(14, 9)

[node name="Dialogue" parent="Player" instance=ExtResource("5_jiuq5")]
unique_name_in_owner = true
visible = false
offset_left = -230.0
offset_top = 129.0
offset_right = 690.0
offset_bottom = 129.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2.5, 2.5)

[node name="Cauldron" parent="." instance=ExtResource("6_u6cyb")]
z_index = 2
position = Vector2(398, 528)
script = ExtResource("13_f5qid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cauldron"]
position = Vector2(-0.5, 22)
shape = SubResource("RectangleShape2D_gubc5")

[node name="Sprite2D" type="Sprite2D" parent="Cauldron"]
position = Vector2(9.536743e-06, 19.00001)
scale = Vector2(1.1017337, 0.9857617)
texture = ExtResource("13_u6cyb")

[node name="InteractSprite" type="Sprite2D" parent="Cauldron"]
z_index = 2
position = Vector2(0, -5)
scale = Vector2(1.1017337, 0.9857617)
texture = ExtResource("15_qtyfc")

[node name="Area2D" type="Area2D" parent="Cauldron"]
position = Vector2(0, 19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cauldron/Area2D"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_pu3yx")

[connection signal="transition_ended" from="TransitionScreen" to="." method="_on_transition_screen_transition_ended"]
[connection signal="transition_ended" from="TransitionScreen" to="Cauldron" method="_on_transition_screen_transition_ended"]
[connection signal="finished" from="Transformation/TransformationScene" to="." method="_on_transformation_scene_finished"]
[connection signal="body_entered" from="Cauldron/Area2D" to="Cauldron" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Cauldron/Area2D" to="Cauldron" method="_on_area_2d_body_exited"]
